# agentic-ai-assignment-1

./: README.md  University-Registration.py  pyproject.toml
